data processing, cleaning columns

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "ae278117",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "[1000 rows x 28 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,9 +412,87 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\user\\projects\\customer_behaviour_dataset\\Customer_Segmentation\\Ecommerce_Consumer_Behavior_Analysis_Data.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\user\\projects\\customer_behaviour_dataset\\Customer_Segmentation\\Raw Data\\Ecommerce_Consumer_Behavior_Analysis_Data.csv\")\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8e97900b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Customer_ID                                0\n",
+       "Age                                        0\n",
+       "Gender                                     0\n",
+       "Income_Level                               0\n",
+       "Marital_Status                             0\n",
+       "Education_Level                            0\n",
+       "Occupation                                 0\n",
+       "Location                                   0\n",
+       "Purchase_Category                          0\n",
+       "Purchase_Amount                            0\n",
+       "Frequency_of_Purchase                      0\n",
+       "Purchase_Channel                           0\n",
+       "Brand_Loyalty                              0\n",
+       "Product_Rating                             0\n",
+       "Time_Spent_on_Product_Research(hours)      0\n",
+       "Social_Media_Influence                   247\n",
+       "Discount_Sensitivity                       0\n",
+       "Return_Rate                                0\n",
+       "Customer_Satisfaction                      0\n",
+       "Engagement_with_Ads                      256\n",
+       "Device_Used_for_Shopping                   0\n",
+       "Payment_Method                             0\n",
+       "Time_of_Purchase                           0\n",
+       "Discount_Used                              0\n",
+       "Customer_Loyalty_Program_Member            0\n",
+       "Purchase_Intent                            0\n",
+       "Shipping_Preference                        0\n",
+       "Time_to_Decision                           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count NaN values per column\n",
+    "na_count = df.isna().sum()\n",
+    "na_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b153733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Social_Media_Influence'] = df['Social_Media_Influence'].fillna('Unknown')\n",
+    "df['Engagement_with_Ads'] = df['Engagement_with_Ads'].fillna('Unknown')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbe1acdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98685b53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
